public enum Alergia {
    POLEN,
    POLVO,
    GLUTEN,
    LACTOSA,
    MEDICAMENTOS,
    MARISCOS,
    OTROS
}