public enum Area {
    FACTURACION,
    RECEPCION,
    RRHH,
    ADMINISTRACION
}