public enum Cargo {
    MEDICO,
    ADMINISTRADOR,
    RECEPCIONISTA,
    ESPECIALISTA,
    LIMPIEZA,
    CONTADOR,
    OTRA
}