public enum Especialidad {
    CARDIOLOGIA,
    PEDIATRIA,
    DERMATOLOGIA,
    NEUROLOGIA,
    CLINICA_GENERAL
}